# WaveLinux

./: .gitignore  Cargo.toml  LICENSE  NOTES  PKGBUILD  README.md  RELEASE_NOTES.md  RELEASE_REVIEW.md  ROADMAP.md  WaveLinux.spec  distribution.py  health.py  index.html  install.sh  main.py  package.json  pipewire_engine.py  start.sh  stress_control.py  tsconfig.json  uninstall.sh  updates.py  wavelinux_theme.py
.github/workflows/: ci.yml  distro-smoke.yml  release.yml
app_core/: __init__.py  context.py  events.py  feature_flags.py  health_bus.py  module_base.py  module_manager.py
audio_runtime/: __init__.py  adapter.py  controller.py  diagnostics.py  executor.py  models.py  planner.py
controllers/: __init__.py  app_identity_controller.py  audio_event_controller.py  bluetooth_controller.py  channel_controller.py  config_controller.py  device_policy_controller.py  lifecycle_controller.py  module_runtime_controller.py  recovery_controller.py  runtime_view_controller.py  startup_controller.py  stress_control_controller.py
crates/app/: Cargo.toml  tauri.conf.json
crates/app/appimage-extra/: .gitignore
crates/app/src/: elgato.rs  main.rs  streamer_devices.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: hardware_profiles.rs  lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/pw/: Cargo.toml
crates/pw/src/: lib.rs
docs/: architecture.md  setup.md  testing.md  themes.md  wavelinux5-hardware-acceleration.md
engine/: __init__.py  app_identity.py  app_identity_core.py  app_identity_probes.py  app_identity_resolution.py  app_routing.py  cards.py  cleanup.py  defaults.py  devices.py  effects_catalog.py  effects_models.py  effects_pipeline.py  effects_runtime.py  fx_graph.py  ladspa.py  levels.py  mixes.py  models.py  runtime_helpers.py  snapshots.py  source_routing.py  submix.py
modules/: __init__.py  app_routing_module.py  base.py  device_policy_module.py  effects_module.py  health_module.py  metering_module.py  mixer_ui_module.py  runtime_module.py  scenes_module.py  settings_ui_module.py  stress_control_module.py  updates_module.py
packaging/appimage/: AppRun  wavelinux.appdata.xml  wavelinux.desktop
packaging/aur/: .SRCINFO  PKGBUILD  wavelinux.install
packaging/udev/: 70-wavelinux-streamer-devices.rules
profiles/v1/: README.md  index.json  schema.json
profiles/v1/devices/: apple-airpods-pro.json  audient-id4-mkii.json  audio-technica-at2020usb-x.json  avermedia-live-gamer-portable-2-plus.json  (+44 more)
scripts/: appimage-apprun.sh  bench-audio-runtime.sh  build-aur.sh  build-hardware-profile-assets.sh  build-local.sh  build-native.sh  build-release.sh  build-rnnoise-ladspa.sh  build-updater-manifest.py  build_appimage.sh  build_release_manifest.py  check-dependencies.sh  distro-smoke.sh  finalize-appimage.sh  generate-release-key.sh  install-alsa-aliases.sh  install-local.sh  rebuild-appimage-with-host-strip.sh  release-env.sh  release_candidate_check.sh  remove-alsa-aliases.sh  sanitize-appimage-pipewire.sh  sanitize-runtime-env.sh  sign-release-artifacts.sh  sign_release_manifest.py  stage-appimage-runtime.sh  test-all.sh  uninstall-local.sh  verify_release_manifest.py  wavelinux-launcher.sh
src/: App.tsx  styles.css  tauri.ts  themes.ts  types.ts
state/: __init__.py  window_state.py
tests/: test_audio_runtime_controller.py  test_audio_runtime_executor.py  test_audio_runtime_planner.py  test_audio_runtime_worker.py  test_channel_fx_replacement.py  test_distribution.py  test_engine_app_identity.py  test_engine_app_identity_resolution.py  test_engine_app_routing.py  test_engine_cards.py  test_engine_effects_catalog.py  test_engine_effects_pipeline.py  test_engine_effects_readiness.py  test_engine_effects_runtime.py  test_engine_fx_graph.py  test_engine_levels.py  test_engine_mixes.py  test_engine_models.py  test_engine_modules.py  test_engine_runtime_helpers.py  test_engine_snapshots.py  test_engine_source_routing.py  test_engine_submix.py  test_feature_flags.py  test_fx_path_diagnostic.py  test_main_app_identity.py  test_main_auto_recovery.py  test_main_cli.py  test_main_health.py  test_main_layout_scaling.py  test_main_mic_gain.py  test_main_mix_persistence.py  test_main_pactl_events.py  test_main_scenes.py  test_main_updates.py  test_meter_worker.py  test_module_manager.py  test_module_restart.py  test_pipewire_engine_app_routing.py  test_pipewire_engine_ladspa_paths.py  (+8 more)
tools/: __init__.py
tools/stress/: README.md  __init__.py  assertions.py  audio_probe.py  bluetooth_ops.py  control_client.py  fx_path_diagnostic.py  profile.current-machine.json  profile.schema.json  run_stress_suite.py  synthetic_inputs.py  system_snapshot.py
ui/: __init__.py  main_window.py  window_device_mixin.py  window_shell_mixin.py
ui/dialogs/: card_profile_dialog.py  fx_dialog.py
ui/health/: __init__.py  health_card.py
ui/mixer/: __init__.py  channel_strip.py  mixer_panel.py
ui/routing/: __init__.py  app_routing_panel.py  app_routing_row.py
ui/settings/: __init__.py  advanced_controller.py  advanced_tab.py  apps_tab.py  dialog.py  dialog_controller.py  health_controller.py  health_tab.py  scenes_controller.py  scenes_tab.py  updates_actions.py  updates_controller.py  updates_rendering.py  updates_runtime.py  updates_tab.py
(+1 files in other folders)
