[workspace]
members = [
    "crates/model",
    "crates/pw",
    "crates/engine",
    "crates/app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/DuskyProjects/WaveLinux"
authors = ["WaveLinux contributors"]

[workspace.dependencies]
anyhow = "1"
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
