[package]
name = "wavelinux-app"
version = "4.3.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libloading = "0.8"
libc = "0.2"
semver = "1"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
thiserror.workspace = true
time.workspace = true
url = "2"
wavelinux-engine = { path = "../engine" }
wavelinux-model = { path = "../model" }
