[package]
name = "wavelinux-dsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "wavelinux5-dsp-helper"
path = "src/bin/wavelinux5-dsp-helper.rs"

[dependencies]
libc = "0.2"
pipewire = { version = "0.9", features = ["v0_3_44"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wavelinux-model = { path = "../model" }
