[package]
name = "wavelinux-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
wavelinux-model = { path = "../model" }
wavelinux-pw = { path = "../pw" }

[dev-dependencies]
tempfile.workspace = true

