[package]
name = "wavelinux-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
directories.workspace = true
minisign-verify = "0.2"
pipewire = { version = "0.9", features = ["v0_3_44"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
wavelinux-model = { path = "../model" }
wavelinux-pw = { path = "../pw" }

[dev-dependencies]
include_dir.workspace = true
tempfile.workspace = true
