[package]
name = "wavelinux-pw"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
pipewire-rs = ["dep:pipewire"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wavelinux-model = { path = "../model" }
pipewire = { version = "0.9", optional = true }

[dev-dependencies]
tempfile.workspace = true

